sticky enquire now button

--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-      <link rel="preconnect" href="https://fonts.googleapis.com">
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <title>Perniagaan Motor Kekal</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <title>Perniagaan Motor Kekal, your authorized motorcycle dealer in Johor Bahru</title>
+    <meta name="description" content="Motorcycle shop in Johor Bahru. Kedai Motor in Johor Jaya. Your authorized motorcycle dealer in JB,
+        we offer a variety of motorcycle-related services, products and accessorie. We do momtorcycle repair and maintenance. ">
   </head>
   <body>
     <noscript>
